commented app-product-list

--- a/angular-ecommerce/src/app/app.component.html
+++ b/angular-ecommerce/src/app/app.component.html
@@ -53,7 +53,8 @@
     </header>
     <!-- END HEADER DESKTOP-->
     <!-- MAIN CONTENT-->
-    <app-product-list></app-product-list>
+<!--    <app-product-list></app-product-list>-->
+
   </div>
 </div>
 
