commented mouse pad & luggage Tags

--- a/angular-ecommerce/src/app/app.component.html
+++ b/angular-ecommerce/src/app/app.component.html
@@ -15,12 +15,12 @@
           <li>
             <a href="#">Coffee Mugs</a>
           </li>
-          <li>
-            <a href="#">Mouse Pads</a>
-          </li>
-          <li>
-            <a href="#">Luggage Tags</a>
-          </li>
+<!--          <li>-->
+<!--            <a href="#">Mouse Pads</a>-->
+<!--          </li>-->
+<!--          <li>-->
+<!--            <a href="#">Luggage Tags</a>-->
+<!--          </li>-->
         </ul>
       </nav>
     </div>
