--- a/angular-ecommerce/src/app/app.component.html
+++ b/angular-ecommerce/src/app/app.component.html
@@ -13,7 +13,7 @@
             <a routerLink="/category/1" routerLinkActive="active-link">Books</a>
           </li>
           <li>
-            <a href="#">Coffee Mugs</a>
+            <a routerLink="/category/2" routerLinkActive="active-link">Coffee Mugs</a>
           </li>
 <!--          <li>-->
 <!--            <a href="#">Mouse Pads</a>-->
