updated links from product id & product image

--- a/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -7,8 +7,14 @@
         <!--Loop of over the collection of products-->
         <div *ngFor="let tempProducts of products" class="col-3">
           <div class="product-box">
-            <img src="{{tempProducts.imageUrl}}" class="img-responsive">
-            <h1>{{tempProducts.name}}</h1>
+            <a routerLink="/products/{{tempProducts.id}}">
+              <img src="{{tempProducts.imageUrl}}" class="img-responsive">
+            </a>
+            <a routerLink="/products/{{tempProducts.id}}">
+              <h1>{{tempProducts.name}}</h1>
+            </a>
+
+
             <div class="price">{{tempProducts.unitPrice | currency:'INR'}}</div>
             <a href="#" class="primary-btn">Add to Cart</a>
           </div>
