--- a/angular-ecommerce/src/app/components/product-details/product-details.component.html
+++ b/angular-ecommerce/src/app/components/product-details/product-details.component.html
@@ -6,7 +6,7 @@
     <a href="#" class="primary-btn">Add to Cart</a>
     <hr>
     <h4>Description</h4>
-    <p>{{product.description}}
-    <p>
+    <p>{{product.description}}</p>
+    <a routerLink="/product" class="mt-5">Back to Product List</a>
   </div>
 </div>
